Modifie the ManyToManyConnexion and feature to use Less

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,8 +1,18 @@
 body {
   header {
-    background-color: lightgreen;
+    background-color: #fffff;
   }
-
+  main {
+    background-color: lightblue;
+    .style-main {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      .style-button {
+        display: flex;
+      }
+    }
+  }
 }
 .hidden {
   display: none;
