--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,22 @@
 body header {
-  background-color: lightgreen;
+  background-color: #fffff;
+}
+body main {
+  background-color: lightblue;
+}
+body main .style-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+body main .style-main .style-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 .hidden {
   display: none;
