--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,19 +1,132 @@
 body {
+  background-color: #F5F6FA;
   header {
-    background-color: #fffff;
-  }
-  main {
-    background-color: lightblue;
-    .style-main {
+    background-color: lightgrey;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+      h1{
+      font-size: 35px;
+      text-transform: uppercase;
+    }
+    div {
+      width: 50%;
       display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      .style-button {
-        display: flex;
+      justify-content: space-evenly;
+      .button {
+        background-color: #aebde5;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        border-radius: 15px 50px;
+        &:focus{
+          outline: none;
+        }
+        &:hover {
+          background-color: #4668c4;
+          color: #fff;
+          transition-duration: 1s;
+          transition-property: background-color, color;
+        }
       }
     }
   }
-}
-.hidden {
-  display: none;
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+      height: 80vh;
+    .title-main {
+      justify-content: center;
+      width: 100%;
+      margin-top: 25px;
+      display: flex;
+      margin-bottom: 25px;
+      h2 {
+        font-size: 35px;
+        text-transform: uppercase;
+      }
+    }
+    .style-main {
+      display: flex;
+      width: 80%;
+      flex-wrap: wrap;
+      justify-content: center;
+      .div-container {
+        background-color: coral;
+        padding: 10px;
+        height: 150px;
+        width: 230px;
+        margin: 25px;
+        .style-liste {
+          height: 80%;
+          ul {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            li {
+                padding-bottom: 2%;
+            }
+          }
+        }
+        .style-button {
+          display: flex;
+          justify-content: center;
+        }
+      }
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      input {
+        border: none;
+        border: 1px solid;
+        color: black;
+        text-align: center;
+        font-size: 16px;
+         padding: 7px 13px;
+         margin-bottom: 10px;
+        &:focus {
+          outline: none;
+        }
+      }
+      #authors, #material {
+        margin-bottom: 10px;
+      }
+    }
+  }
+  footer {
+    height: 5vh;
+    background-color: #262e39;
+    color: white;
+    position: fixed;
+    width: 100%;
+    div {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 100%;
+      text-transform: uppercase;
+    }
+  }
+  .hidden {
+    display: none;
+  }
+  &.colorNight {
+    background-color: #333;
+    color: white;
+  }
+  .colorNight {
+    background-color: #333;
+    color: white;
+    border: 1px solid;
+    border-color: white;
+  }
+
 }
