--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -59,7 +59,7 @@ body {
       flex-wrap: wrap;
       justify-content: center;
       .div-container {
-        background-color: coral;
+        background-color: #fff;
         padding: 10px;
         height: 150px;
         width: 230px;
